[gd_scene load_steps=3 format=3 uid="uid://cqtytr2sr21ic"]

[ext_resource type="Script" path="res://scripts/ui/EnhancedWordCardUI.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.3, 0.3, 0.4, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.5, 0.5, 0.7, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 3
shadow_offset = Vector2(2, 2)

[node name="EnhancedWordCardUI" type="Control"]
custom_minimum_size = Vector2(150, 200)
script = ExtResource("1")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="Label" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 10.0
offset_right = 60.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "WORD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -30.0
offset_right = 70.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 12
text = "Description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
visible = false

[node name="Tags" type="HBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="UsesLabel" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -25.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "Used: 0"
horizontal_alignment = 2
modulate = Color(0.7, 0.7, 0.7, 1)
visible = false

[connection signal="gui_input" from="Background" to="." method="_on_gui_input"]